# zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conda_setup.md  setup.py  zephyr_env.yml
cpp/: numpy_conversions.cpp  oriented_features.cpp
include/: numpy_conversions.h  oriented_features.h
notebooks/: TestExample.ipynb
python/zephyr/: .gitignore  constants.py  data_util.py  losses.py  normals.py  options.py  test.py  test_all.py  train.py
python/zephyr/datasets/: __init__.py  bop_raw_dataset.py  collate.py  concat_dataset.py  prep_dataset.py  render_dataset.py  score_dataset.py
python/zephyr/full_pipeline/: corre_score.py  feature_frames.py  feature_match.py  feature_pyramid.py  hog_orientation.py  keypoints.py  main.py  main2.py  model_featurization.py  model_grid.py  options.py  render_bop_grid.py  sample_mesh.py  scene_featurization.py  sift.py
python/zephyr/models/: __init__.py  base.py  dgcnn.py  linear.py  masked_conv.py  masked_conv_backup.py  point_mlp.py  pointnet.py  pointnet2.py  pointnet3.py
python/zephyr/utils/: __init__.py  bop_dataset.py  edges.py  halcon_wrapper.py  icp.py  image_crop.py  mask_edge.py  metrics.py  renderer.py  timer.py  vis.py
